item_card.xml added && SecondActivity.xml updated

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -86,4 +86,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraint_second_sub" />
 
+    <HorizontalScrollView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:layout_width="match_parent"
+        android:layout_height="200dp" >
+
+    </HorizontalScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
