--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -60,9 +60,11 @@
             app:neumorph_shapeType="pressed" />
 
         <soup.neumorphism.NeumorphImageView
+            android:id="@+id/neumorphImageView6"
             android:layout_width="68dp"
             android:layout_height="68dp"
             android:padding="26dp"
+            android:tint="@color/blue_light"
             android:src="@drawable/ic_range"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -125,8 +127,8 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/neumorphImageView"
         app:layout_constraintStart_toStartOf="parent"
